# qt-media-player

./: CMakeLists.txt  CommonButtons.qml  Main.qml  README.md  main.cpp  resource.qrc
